--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,11 @@
   /* font */
   --primary-fonts: "Poppins", sans-serif;
 }
+
 .link {
   text-decoration: none;
 }
+
 .list {
   list-style-type: none;
 }
@@ -37,23 +39,41 @@
 }
 
 .nav-link {
-    font-weight: 500;
-    color: var(--secondary-text-color);
+  font-weight: 500;
+  color: var(--secondary-text-color);
 }
+
 .nav-link:hover,
 .nav-link:focus {
   color: var(--primary-text-color);
 }
-.current {
+
+.link.current {
   var(--primary-text-color);
 }
+
 .header-button {
-    font-family: var(--primary-fonts);
-    font-size: 20px;
-    line-height: 1.5;
-    letter-spacing: 0.03em;
-    color: var(--dark-text-color);
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
+  font-family: var(--primary-fonts);
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: var(--dark-text-color);
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.section-title {
+  font-weight: 600;
+  font-size: 48px;
+  color: var(--dark-text-color);
+  }
+
+/* hero */
+
+.hero-title {
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 1.25;
+  color: var(--dark-text-color);
 }
