--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --logo-text-color: #939393;
   --light-text-color: #FFFFFF;
   --bg-color:#FFFFFF;
+  --botton-bg-color: #263238;
 
   /* font */
   --primary-fonts: "Poppins", sans-serif;
@@ -76,4 +77,48 @@
   font-size: 64px;
   line-height: 1.25;
   color: var(--dark-text-color);
+}
+
+.hero-text {
+  font-size: 24px;
+}
+
+.hero-button {
+    font-family: var(--primary-fonts);
+    font-size: 36px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    color: var(--light-text-color);
+    cursor: pointer;
+    background-color: var(--botton-bg-color);
+    border: none;
+}
+
+.section-title {
+  font-weight: 600;
+  font-size: 48px;
+  color: var(--dark-text-color);
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
+.div3 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+
+.div4 {
+  grid-area: 2 / 2 / 3 / 4;
 }
